--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@types/react-dom": "^17.0.0"
   },
   "dependencies": {
-    "@zanichelli/albe-design-tokens": "^0.3.0-RC3",
+    "@zanichelli/albe-design-tokens": "^1.0.0",
     "dialog-polyfill": "^0.5.6",
     "flatpickr": "^4.6.13",
     "hammerjs": "^2.0.8"
