--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,10 +1,10 @@
 name: Storybook Workflow
 
 on:
-  release:
-    branches:
-      - master
-    types: [published]
+  workflow_run:
+    workflows: [New release version]
+    types: [completed]
+    branches: [master]
   workflow_dispatch:
 
 jobs:
@@ -12,6 +12,7 @@ jobs:
   build-deploy:
     name: Build and deploy storybook
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/setup-node@v3
         with:
