--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "rimraf": "^5.0.7",
     "standard-version": "^9.1.1",
     "storybook": "^8.1.4",
-    "storybook-addon-stencil": "file:../storybook-addon-stencil",
+    "storybook-addon-stencil": "0.2.0",
     "stylelint": "^14.9.1",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-prettier": "^9.0.3",
