feat: use custom addon for `controls` panel

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "jsxFactory": "h",
     "skipLibCheck": true
   },
-  "include": ["src", "docs"],
+  "include": ["src", "docs", ".storybook/elements"],
   "exclude": ["node_modules"]
 }
