fix: update setup-node action version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,15 +25,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+          check-latest: true
+          registry-url: "https://registry.npmjs.org"
+          always-auth: true
       - name: Prepare package
         run: |
           git checkout ${{ github.ref_name }}
           bash ./scripts/pre-release.sh
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "20.x"
-          registry-url: "https://registry.npmjs.org"
-          always-auth: true
       - name: Publish to npm
         run: yarn publish --tag ${{ inputs.rc_version_tag }} --new-version ${{ inputs.rc_version_name }}
         env:
@@ -43,17 +44,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+          check-latest: true
+          registry-url: "https://registry.npmjs.org"
+          always-auth: true
       - name: Prepare package
         run: bash ./scripts/pre-release.sh
       - name: Standard version
         run: |
           yarn release --release-as ${{ inputs.version_type }}
           git push --follow-tags origin master
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "20.x"
-          registry-url: "https://registry.npmjs.org"
-          always-auth: true
       - name: Publish to npm
         run: yarn publish
         env:
