--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,10 +35,11 @@ jobs:
         run: |
           git checkout ${{ github.ref_name }}
           bash ./scripts/pre-release.sh
-      - name: Publish to npm
-        run: yarn publish --tag ${{ inputs.rc_version_tag }} --new-version ${{ inputs.rc_version_name }}
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: echo node --version
+      # - name: Publish to npm
+      #   run: yarn publish --tag ${{ inputs.rc_version_tag }} --new-version ${{ inputs.rc_version_name }}
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
   latest:
     if: ${{ github.ref_name == 'master' }}
     runs-on: ubuntu-latest
