--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,10 @@ jobs:
     name: Setup
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: "20.x"
       - name: Install dependencies
         run: yarn install --frozen-lockfile --ignore-scripts
       - uses: actions/cache@v3
@@ -30,10 +30,10 @@ jobs:
       - setup
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: "20.x"
       - uses: actions/cache@v3
         id: yarn-cache
         with:
@@ -50,10 +50,10 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: "20.x"
       - uses: actions/cache@v3
         id: yarn-cache
         with:
@@ -70,10 +70,10 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: "20.x"
       - uses: actions/cache@v3
         id: yarn-cache
         with:
