--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,27 +7,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  setup:
-    name: Setup
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile --ignore-scripts
-      - uses: actions/cache@v4
-        id: yarn-cache
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
   prettier:
     name: Run prettier
-    needs:
-      - setup
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -41,12 +22,15 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile --ignore-scripts
       - name: Run prettier
-        run: yarn prettier --check .
+        run: |
+          ls -al .prettierignore .prettierrc.json
+          yarn prettier --version
+          yarn prettier --check .
   eslint:
     name: Run eslint
-    needs:
-      - setup
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
@@ -61,12 +45,12 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile --ignore-scripts
       - name: Run eslint
         run: yarn eslint src/
   stylelint:
     name: Stylelint
-    needs:
-      - setup
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
@@ -81,5 +65,7 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile --ignore-scripts
       - name: Run stylelint
         run: yarn stylelint 'src/**/*.css'
