--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,17 +1,18 @@
 {
   "extends": ["stylelint-config-standard", "stylelint-config-idiomatic-order", "stylelint-config-prettier"],
   "rules": {
+    "import-notation": null,
     "declaration-block-single-line-max-declarations": 0,
     "no-descending-specificity": null,
-    "selector-class-pattern": "^([a-z][a-z0-9]*)(-{0,2}[a-z0-9]+)*$",
-    "custom-property-pattern": "^([a-zA-Z][a-zA-Z0-9]*)(-{0,2}[a-zA-Z0-9]+)*$",
+    "selector-class-pattern": "^-{0,1}([a-z][a-z0-9]*)(-{0,2}[a-z0-9]+)*$",
+    "custom-property-pattern": "^([a-zA-Z][a-zA-Z0-9]*)(-{0,2}[a-zA-Z0-9_]+)*$",
     "csstools/value-no-unknown-custom-properties": [
       true,
       {
-        "importFrom": [
-          "./node_modules/@zanichelli/albe-design-tokens/dist/tokens.css",
-          "./node_modules/@zanichelli/albe-design-tokens/dist/themes/default.css"
-        ]
+        "resolver": {
+          "paths": ["./src/tokens", "./src/tokens/palette", "./src/themes"]
+        },
+        "importFrom": ["./src/tokens/main.css", "./src/themes/default.css"]
       }
     ],
     "value-no-vendor-prefix": null
