chore: update storybook-addon-stencil and some other pkg

--- a/package.json
+++ b/package.json
@@ -47,19 +47,18 @@
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
     "@stencil-community/eslint-plugin": "^0.7.2",
-    "@stencil/core": "4",
+    "@stencil/core": "^4.21.0",
     "@stencil/react-output-target": "^0.5.3",
-    "@storybook/addon-docs": "^8.1.9",
-    "@storybook/addon-viewport": "^8.1.9",
-    "@storybook/blocks": "^8.1.9",
-    "@storybook/web-components": "^8.1.9",
-    "@storybook/web-components-vite": "^8.1.9",
+    "@storybook/addon-docs": "^8.2.9",
+    "@storybook/addon-viewport": "^8.2.9",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/web-components": "^8.2.9",
+    "@storybook/web-components-vite": "^8.2.9",
     "@types/hammerjs": "^2.0.39",
     "@types/jest": "^29.5.6",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
-    "babel-loader": "^8.2.4",
     "commit-and-tag-version": "^12.4.1",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -76,8 +75,8 @@
     "prettier-plugin-organize-imports": "^3.2.4",
     "puppeteer": "^21.0.0",
     "rimraf": "^5.0.7",
-    "storybook": "^8.1.9",
-    "storybook-addon-stencil": "^0.2.1",
+    "storybook": "^8.2.9",
+    "storybook-addon-stencil": "^0.2.2",
     "stylelint": "^14.9.1",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-prettier": "^9.0.3",
