--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "mkdirp react && yarn build.wc && yarn build.react",
     "build-storybook": "yarn build && storybook build --config-dir .storybook . --output-dir storybook",
-    "build.react": "rimraf react/* && tsc --build tsconfig.react.json",
+    "build.react": "rimraf react && tsc --build tsconfig.react.json",
     "build.wc": "stencil build",
     "generate": "plop --plopfile internals/generators/index.js",
     "lint": "yarn lint.eslint && yarn lint.stylelint && yarn lint.prettier",
