fix: z-logo height and product-logo alignment; remove duplicate tabindex on z-input of the searchbar

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
     "prettier/prettier": "warn",
     "curly": "warn",
     "no-duplicate-imports": "error",
-    "no-console": "warn",
+    "no-console": ["warn", {"allow": ["warn", "error"]}],
     "constructor-super": "off",
     "no-fallthrough": "warn",
     "no-self-compare": "error",
