chore: revert to stencil@4.20 since the 4.21 isn't compatible with react-output-target@0.5.3

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "react/"
   ],
   "scripts": {
-    "build": "mkdirp react && yarn build.wc && yarn build.react",
+    "build": "yarn build.wc && yarn build.react",
     "build-storybook": "yarn build && storybook build --config-dir .storybook . --output-dir storybook",
     "build.react": "rimraf react && tsc --build tsconfig.react.json",
-    "build.wc": "stencil build",
+    "build.wc": "mkdirp react && rimraf src-react/react-component-lib && stencil build",
     "generate": "plop --plopfile internals/generators/index.js",
     "lint": "yarn lint.eslint && yarn lint.stylelint && yarn lint.prettier",
     "lint-fix": "yarn lint-fix.eslint && yarn lint-fix.stylelint && yarn lint-fix.prettier",
@@ -30,7 +30,7 @@
     "prepare": "husky install",
     "release": "commit-and-tag-version",
     "start": "stencil build --dev --watch --serve --no-open",
-    "start-storybook": "storybook dev --port 3003 --no-open",
+    "start-storybook": "yarn build.wc --dev && storybook dev --port 3003 --no-open",
     "test": "stencil test --spec",
     "test.e2e": "stencil test --e2e",
     "test.e2e.single": "stencil test --e2e -- ",
@@ -46,7 +46,7 @@
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
     "@stencil-community/eslint-plugin": "^0.8.0",
-    "@stencil/core": "^4.21.0",
+    "@stencil/core": "~4.20.0",
     "@stencil/react-output-target": "^0.5.3",
     "@storybook/addon-docs": "^8.3.0",
     "@storybook/addon-viewport": "^8.3.0",
