chore: cssprop to set the height of the bottom-up offcanvas; fix transitions and stories

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^26.0.0",
     "stylelint-value-no-unknown-custom-properties": "^4.0.0",
-    "typescript": "^5.4.3",
+    "typescript": "~5.4.0",
     "vite": "^5.2.11"
   },
   "peerDependencies": {
