refactor: remove shadow and fix some style; linting on test files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -140,6 +140,12 @@
         ],
         "no-duplicate-imports": "off"
       }
+    },
+    {
+      "files": ["*.spec.ts"],
+      "rules": {
+        "@typescript-eslint/explicit-function-return-type": "off"
+      }
     }
   ]
 }
