--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@stencil/core": "~4.20.0",
     "@stencil/react-output-target": "^0.5.3",
     "@storybook/addon-docs": "^8.3.0",
+    "@storybook/addon-themes": "^8.5.3",
     "@storybook/addon-viewport": "^8.3.0",
     "@storybook/blocks": "^8.3.0",
     "@storybook/web-components": "^8.3.0",
