--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,9 +6,9 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier",
     "plugin:storybook/recommended",
-    "plugin:@stencil-community/recommended"
+    "plugin:@stencil-community/recommended",
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -16,9 +16,8 @@
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "prettier/prettier": "warn",
     "curly": "warn",
     "no-duplicate-imports": "error",
     "no-console": ["warn", {"allow": ["warn", "error"]}],
