--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "dialog-polyfill": "^0.5.6",
+    "dompurify": "^3.2.6",
     "flatpickr": "^4.6.13",
     "hammerjs": "^2.0.8"
   },
@@ -54,6 +55,7 @@
     "@storybook/blocks": "^8.3.0",
     "@storybook/web-components": "^8.3.0",
     "@storybook/web-components-vite": "^8.3.0",
+    "@types/dompurify": "^3.2.0",
     "@types/hammerjs": "^2.0.39",
     "@types/jest": "^29.5.6",
     "@types/react-dom": "^18.3.0",
