chore: adds missing dep

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
+    "@rollup/plugin-image": "^3.0.3",
     "@stencil-community/eslint-plugin": "^0.8.0",
     "@stencil/core": "~4.20.0",
     "@stencil/react-output-target": "^0.5.3",
