--- a/package.json
+++ b/package.json
@@ -102,5 +102,6 @@
   "collection": "dist/collection/collection-manifest.json",
   "collection:main": "dist/collection/index.js",
   "es2015": "dist/esm/index.mjs",
-  "es2017": "dist/esm/index.mjs"
+  "es2017": "dist/esm/index.mjs",
+  "packageManager": "yarn@4.10.3"
 }
