fix: enable `corepack` to use latest yarn version

--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           node-version: 20
       - uses: actions/checkout@v4
+      - name: Enable Corepack
+        run: corepack enable
       - name: Install dependencies
         run: yarn install --frozen-lockfile --ignore-scripts
       - name: Build Storybook
